seedboxk8s/applications/traefik/DaemonSet.yaml
---
# Installing as a DaemonSet mimics Docker Swarm Mode routing mesh,
# where all exposed ports are available on all nodes,
# and the mesh automatically routes incoming requests to a node running the service.
# Load balancing on a multi-node Swarm cluster might be done externally like with HAProxy.
# On a single-node Swarm cluster, just set DNS to the cluster's IP address,
# and no load balancer is necessary.
# This means we do not need MetalLB or anything like it.
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - --api.insecure=true
          - --api.dashboard=true
          - --accesslog
          # Listen on all interfaces, from inside the container
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --providers.kubernetescrd
          # Allow cross-namespace references
          - --providers.kubernetescrd.allowCrossNamespace=true
        ports:
        # Forward the ports from the host to the container
        - name: web
          containerPort: 80
          hostPort: 80
          protocol: TCP
        - name: websecure
          containerPort: 443
          hostPort: 443
          protocol: TCP

        # # Allow Traefik to bind to privileged ports 80 and 443
        securityContext:
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
