seedboxk8s/applications/traefik/Pod.tailscale.yaml
# Copyright (c) Tailscale Inc & AUTHORS
# SPDX-License-Identifier: BSD-3-Clause
apiVersion: v1
kind: Pod
metadata:
  name: tailscale-proxy
  namespace: traefik
spec:
  serviceAccountName: "tailscale"
  containers:
  - name: tailscale
    imagePullPolicy: Always
    image: "ghcr.io/tailscale/tailscale:latest"
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
