seedboxk8s/applications/traefik/Service.traefik-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale
  namespace: traefik
spec:
  selector:
    app: traefik-tailscale
  # This must match the IP address in the TS_DEST_IP env var in the tailscale pod,
  # and ofc it must be unique in the cluster.
  ClusterIP: 10.96.0.100
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: 443
  - name: clustergit-ssh
    protocol: TCP
    port: 20022
    targetPort: 20022
